[package]
name = "pnnsul"
description = "port network namespace unix listener"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
neli = "0.7.4"
nix = { version = "0.31.1", features = ["process", "sched", "user"] }
reqwest = { version = "0.13.2", default-features = false } # chrm, this nearly doubles the size of the executable
tokio = { version = "1.49.0", features = ["io-util", "net", "process", "rt"], default-features = false }
